--- a/styles/base.css
+++ b/styles/base.css
@@ -21,20 +21,17 @@ header {
 header img {
     border-radius: 50%;
     max-width: 100px;
-    align-items: center;
-}
-
-.writeLine {
-    display: block;
+    margin-right: 10px;
 }
 
 header h1 {
-    margin-top: 10px;
+    margin-top: 0;
     color: #fff;
 }
 
 h1 {
-    margin: 0;
+    display: flex;
+    align-items: center;
 }
 
 nav ul {
@@ -42,11 +39,13 @@ nav ul {
     list-style-type: none;
     padding: 10px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
 nav li {
-    display: inline;
-    margin-right: 20px;
+    display: block;
+    margin-right: 10px;
 }
 
 nav a {
