--- a/styles/base.css
+++ b/styles/base.css
@@ -34,6 +34,8 @@ h1 {
     align-items: center;
 }
 
+
+
 nav ul {
     background-color: #2c3e50;
     list-style-type: none;
@@ -41,11 +43,12 @@ nav ul {
     text-align: center;
     display: flex;
     flex-direction: column;
+
 }
 
 nav li {
-    display: block;
-    margin-right: 10px;
+    margin-right: 20px;
+
 }
 
 nav a {
@@ -57,10 +60,12 @@ main {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
+    display: flex;
+    flex-direction: column; 
 }
-
 h2 {
     text-align: center;
+
 }
 
 .card {
@@ -85,4 +90,28 @@ footer {
     padding: 10px;
     text-align: center;
     margin-top: auto;
+}
+
+@media screen and (min-width: 768px) {
+    main {
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+        grid-template-rows: auto;
+        gap: 20px;
+        max-width: 100%;
+        align-items: flex-start flex-end;
+        margin: 50px;
+    }
+     
+    h2 {
+        grid-column: 1 / -1;
+        text-align: left;
+        margin: 10px;
+    }
+     
+    .card {
+        padding: 20px;
+        border: 1px solid #ccc;
+        margin: 10px;
+    }
 }
