--- a/styles/base.css
+++ b/styles/base.css
@@ -43,7 +43,6 @@ nav ul {
     text-align: center;
     display: flex;
     flex-direction: column;
-
 }
 
 nav li {
@@ -81,8 +80,10 @@ h2 {
 }
 
 .card ul {
-    list-style-type: none;
+    list-style-type: circle;
 }
+
+
 
 footer {
     background-color: #2c3e50;
@@ -90,6 +91,70 @@ footer {
     padding: 10px;
     text-align: center;
     margin-top: auto;
+}
+
+nav {
+    display: block;
+    
+}
+
+#menu {
+	font-size: 1.5rem;
+	border: 0;
+	background: none;
+	color: #000;
+	position: absolute;
+	top: 1rem;
+	right: 1rem;
+}
+
+
+#menu::before {
+    content: "☰";
+}
+
+#menu.open::before {
+	content: "✖️";
+}
+
+.navigation {
+	display: flex;
+	flex-direction: column;
+	list-style: none;
+	background-color: #333;
+	color: #fff;
+}
+
+.active::before {
+    content:"| ";
+}
+
+.active::after {
+    content:" |";
+}
+
+iframe {
+    width: 100%; 
+    height: 300px; 
+    border: none; 
+    margin-top: 20px; 
+    grid-column: 1/3;
+}
+
+
+
+@media screen and (max-width: 768px) {
+    nav ul {
+        display: none;
+    }
+
+    nav ul.open {
+        display: flex;
+    }
+
+    #menu.open {
+        display: block;
+    }
 }
 
 @media screen and (min-width: 768px) {
@@ -114,4 +179,10 @@ footer {
         border: 1px solid #ccc;
         margin: 10px;
     }
+
+    #menu {
+        display: none;
+    }
+
 }
+
