--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -5,8 +5,6 @@ body, html {
     font-family: Arial, sans-serif;
 }
 
-
-
 .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -29,14 +27,18 @@ nav ul {
     justify-content: space-around;
 }
 
-nav ul li {
-    display: flex;
+nav li {
+    margin-right: 20px;
 }
 
-nav ul li a {
+nav a {
     text-decoration: none;
-    color: black;
-    padding: 10px 15px;
+    color: #FFF;
+}
+
+nav li:hover {
+    background-color: #d51315;
+    font-size: 20px;
 }
 
 .hero-image img {
@@ -56,12 +58,12 @@ nav ul li a {
 }
 
 .card {
-    background-color: #ffffff; /* Background color of the card */
-    box-shadow: 0 4px 8px 0 #d40a0a; /* Box shadow for the card */
-    border-radius: 8px; /* Border radius to create rounded corners */
-    padding: 50px; /* Padding inside the card */
-    margin: 10px; /* Margin around the card */
-    display: inline-block; /* Display the cards inline */
+    background-color: #ffffff; 
+    box-shadow: 0 4px 8px 0 #d40a0a; 
+    border-radius: 8px; 
+    padding: 50px; 
+    margin: 10px; 
+    display: inline-block; 
     flex: 1;
 }
 
@@ -98,14 +100,56 @@ footer p {
     padding: 0;
 }
 
+nav {
+    display: block;
+}
+
+#menu {
+    font-size: 1.5rem;
+    border: 0;
+    background: none;
+    color: #000;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+}
+
+#menu::before {
+    content: "☰";
+    color: #fff;
+}
+
+#menu.open::before {
+	content: "X";
+}
+
+.navigation {
+    display: block;
+    background-color: #d51315;
+}
+
+
+
 @media screen and (max-width: 768px) {
     nav ul {
-        flex-direction: column;
+        display: none;
+    }
+    nav ul.open {
+        display: block;
     }
 
-    nav ul li {
+    #menu.open {
         display: block;
-        text-align: center;
-        margin: 10px 0;
+    }
+
+    nav li {
+        padding: 10%;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    #menu {
+        display: none;
+    
     }
 }
