--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -21,14 +21,17 @@ header {
 
 nav ul {
     list-style: none; 
-   padding: 0;
     margin: 0;
     display: flex;
     justify-content: space-around;
+    text-align: center;
 }
 
 nav li {
     margin-right: 20px;
+    padding: 8px;
+    text-decoration: underline;
+    text-decoration-color: #fff ;
 }
 
 nav a {
@@ -101,7 +104,7 @@ footer p {
 }
 
 nav {
-    display: block;
+    display: flex;
 }
 
 #menu {
@@ -141,10 +144,8 @@ nav {
     #menu.open {
         display: block;
     }
+     
 
-    nav li {
-        padding: 10%;
-    }
 }
 
 @media screen and (min-width: 768px) {
