more edits to the chamber site.

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -47,12 +47,11 @@ nav li:hover {
 
 .current-events {
     text-align: center;
-    color: #d51315;
 }
 
 .events-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .card {
@@ -81,6 +80,8 @@ nav li:hover {
     flex: 1;
     margin: 0 10px;
 }
+
+
 
 footer {
     text-align: center;
@@ -131,7 +132,9 @@ nav {
     padding: 50px;
     margin: 10px;
     display: inline-block;
+    
 }
+
 
 
 @media screen and (max-width: 600px) {
@@ -155,7 +158,14 @@ nav {
         display: block;
         width: 100%;
     }
-     
+    
+    .spotlight {
+        flex-direction: column;
+    }
+
+    .events-container {
+        flex-direction: column;
+    }
 }
 
 @media screen and (min-width: 600px) {
@@ -173,4 +183,5 @@ nav {
     .mobile-image {
         display: none;
     }
+
 }
