--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -160,7 +160,7 @@ section.weather-card {
     .mobile-image {
         display: block;
         width: 100%;
-        height: 400px;
+        height: 100%;
     }
     
     .spotlight {
