--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -17,7 +17,7 @@ header {
     padding: 1px;
     background-color: #d51315;
     color: #fff;
-    padding-top: 50px;
+    padding-top: 40px;
 }
 
 nav ul {
@@ -152,28 +152,60 @@ section.weather-card {
 }
 
 
-.light-mode-btn {
+.switch {
     position: absolute;
     top: 1rem;
     right: 1rem;
-}
-
-.dark-mode-btn {
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
     position: absolute;
-    top: 3rem;
-    right: 1rem;
-}
-
-.dark-mode-btn:hover {
-    background-color: #000;
-    color: white;
-    border-radius: 5px;
-}
-
-.light-mode-btn:hover {
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     background-color: #fff;
-    border-radius: 5px;
-}
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: #d51315;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #fff;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #000;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+
+  
 
 @media screen and (max-width: 600px) {
     nav ul {
