--- a/styles/base.css
+++ b/styles/base.css
@@ -63,6 +63,20 @@ main {
     flex-direction: column; 
 }
 
+.hero {
+    margin-top: -20px;
+    width: 100%; 
+    display: grid;
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
+.hero img {
+    width: 100%; 
+    height: auto; 
+   
+}
+
 
 h2 {
     text-align: center;
@@ -161,7 +175,7 @@ iframe {
     }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 960px) {
     main {
         display: grid;
         grid-template-columns: 3fr 1fr;
@@ -185,6 +199,24 @@ iframe {
 
     #menu {
         display: none;
+    }
+
+    .herolabel {
+        position: absolute;
+        top: 300px;
+        left: 150px;
+        background: radial-gradient(#fff, #68aaf7);
+        border: 1px solid rgba(255, 255, 255, 0.75);
+        padding: 1.5rem;
+        box-shadow: 0 0 3rem #fff;
+    }
+    
+    .herolabel p {
+        margin: 0;
+        padding: .25rem;
+        font-weight: 700;
+        font-size: 1.5rem;
+        font-family: serif;
     }
 
 }
