--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -223,6 +223,7 @@ input:checked + .slider:before {
 
 .grid-container {
     display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 .pic1 {
@@ -241,18 +242,24 @@ input:checked + .slider:before {
 }
 
 .pic4 {
-    grid-column-start: 3;
-    grid-column-end: 4;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
 }
 
 .pic5 {
-    grid-column-start: 3;
-    grid-column-end: 4;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
 }
 
 .pic6 {
-    grid-column-start: 3;
-    grid-column-end: 4;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 4;
 }
 
 .pic1 img,
@@ -262,18 +269,61 @@ input:checked + .slider:before {
 .pic5 img,
 .pic6 img {
     width: 100%;
-    height: auto;
+    height: 250px;
+    transition: transform 0.3s ease-in-out;
 }
 
-.guess-card {
+.pic1:hover img,
+.pic2:hover img,
+.pic3:hover img,
+.pic4:hover img,
+.pic5:hover img,
+.pic6:hover img {
+    transform: scale(1.1);
+}
+
+.guest-card {
     grid-row-start: 1;
     grid-row-end: 2;
-    grid-column-start: 1;
-    grid-column-end: 3;
     box-shadow: 0 4px 8px 0 #d40a0a;
     border-radius: 8px;
     padding: 50px;
-    
+    margin-top: 10px;
+    margin-left: 15px;
+    margin-right: 15px;
+    text-align: center;
+}
+
+.card1 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    border-radius: 8px;
+    padding: 50px;
+    margin-top: 10px;
+    margin-left: 15px;
+    margin-right: 15px;
+    text-align: center;
+}
+
+.card2 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 3;
+    grid-row-end: 4;
+    border-radius: 8px;
+
+    margin-top: 10px;
+    margin-left: 15px;
+    margin-right: 15px;
+    text-align: center;
+}
+
+
+
+iframe {
+    height: auto;
 }
 
 @media screen and (max-width: 600px) {
@@ -306,7 +356,56 @@ input:checked + .slider:before {
     .events-container {
         flex-direction: column;
     }
+    .grid-container {
+        grid-template-columns: 1fr;
+    }
+
+    
+
+    .pic1 {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 6;
+        grid-row-end: 7;
+    }
+    
+    .pic2 {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 7;
+        grid-row-end: 8;
+    }
+    
+    .pic3 {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 9;
+        grid-row-end: 10;
+    }
+    
+    .pic4 {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 10;
+        grid-row-end: 11;
+    }
+    
+    .pic5 {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 11;
+        grid-row-end: 12;
+    }
+    
+    .pic6 {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 12;
+        grid-row-end: 13;
+    }
+    
 }
+
 
 @media screen and (min-width: 600px) {
     #menu {
