--- a/styles/form.css
+++ b/styles/form.css
@@ -1,3 +1,10 @@
+:root {
+    --light-grey: #ccc;
+    --form-width: 100%;
+    --form-margin-bottom: 16px;
+    --form-padding: 20px;
+}
+
 .card {
     width: 70%;
     max-width: 300px;
@@ -41,12 +48,12 @@ output {
     text-align: center;
 }
 
+main {
+    text-align: center;
+}
 
-        main {
-            text-align: center;
-        }
+img {
+    max-width: 100%;
+    height: auto;
+}
 
-        img {
-            max-width: 100%;
-            height: auto;
-        }
