--- a/styles/base.css
+++ b/styles/base.css
@@ -96,8 +96,8 @@ h2 {
 }
 
 .card ul {
-    list-style-type: decimal;
-    margin-left: 20px;
+    list-style-type: none;
+    margin-left: 5px;
 }
 
 
