--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -417,8 +417,46 @@ iframe {
     margin-bottom: 5px;
 }
 
+.members-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  
+  .member-box {
+    border: 1px solid #ddd;
+    padding: 10px;
+    margin: 10px;
+    width: 300px; 
+    box-sizing: border-box; 
+  }
+  
+  .member-box img {
+    width: 100%;
+    height: 200px; 
+    object-fit: cover;
+  }
+  
+  .list-view .members-container {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .list-view .member-box {
+    width: 100%;
+    padding: 15px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 
-
+  .list-view .member-box p {
+    margin-left: 40px;
+  }
+  
+  .list-view .member-box:nth-child(even) {
+    background-color: #f2f2f2;
+  }
 
 @media screen and (max-width: 600px) {
     nav ul {
