changes added. few

--- a/scoots/styles/base.css
+++ b/scoots/styles/base.css
@@ -255,16 +255,21 @@ main {
     font-style: italic;
 }
 
+
 .rental-card {
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    width: 300px;
+    margin: 20px auto;
     padding: 20px;
-    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
 }
 
 .rental-image {
-    width: 100%;
-    border-radius: 5px;
+    width: 100%; 
+    height: auto; 
+    border-radius: 10px; 
     margin-bottom: 10px;
 }
 
@@ -289,7 +294,7 @@ main {
 .price-walk-in {
     font-weight: bold;
     margin-bottom: 5px;
-    color: #007bff; /* Blue color for walk-in prices */
+    color: #007bff;
 }
 
 footer {
@@ -362,6 +367,5 @@ footer {
     #menu {
         display: none;
     }
-
-
 }
+
