--- a/scoots/styles/base.css
+++ b/scoots/styles/base.css
@@ -161,8 +161,6 @@ main {
     justify-content: flex-start;
     align-items: flex-start;
     grid-column: 1;
-    grid-row-start: 1;
-    grid-row-end: 3;
 }
 
 .summary-card {
@@ -200,7 +198,6 @@ main {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
     margin-bottom: 20px;
-    grid-column: 2;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -224,6 +221,8 @@ main {
     height: auto; 
 }
 
+
+
 .rental-location-card {
     background-color: #ffffff;
     border-radius: 10px;
@@ -231,6 +230,8 @@ main {
     padding: 20px;
     margin-bottom: 20px;
     text-align: center;
+    grid-column-start: 1;
+    grid-column-end: 3;
 }
 
 .location-title {
@@ -442,6 +443,16 @@ footer {
 
     .hero-collage img::after {
         font-size: 12px;
+    }
+
+    .grid-container {
+        grid-template-columns: 1fr;
+    }
+
+    .weather-card,
+    .rental-location-card {
+        grid-column: auto;
+        width: auto;
     }
     
 }
