--- a/scoots/styles/base.css
+++ b/scoots/styles/base.css
@@ -428,6 +428,11 @@ footer {
     text-align: center;
 }
 
+footer a {
+    color: white;
+    text-decoration: underline;
+}
+
 .fa {
     padding: 15px;
     font-size: 30px;
